--- a/index.html
+++ b/index.html
@@ -1,13 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+<head>
+    <meta charset="UTF-8"/>
+    <link rel="icon" href="/favicon.ico"/>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Exo+2:ital,wght@0,200;0,700;0,400&display=swap"
+          rel="stylesheet">
+
     <title>Vite App</title>
-  </head>
-  <body>
-    <main id="app" class="main"></main>
-    <script type="module" src="/src/main.js"></script>
-  </body>
+</head>
+<body>
+<main id="app" class="main"></main>
+<script type="module" src="/src/main.js"></script>
+</body>
 </html>
