--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <link rel="icon" href="/favicon.ico"/>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
-    <title>Vite App</title>
+    <title>Толстовки оптом</title>
 </head>
 <body>
 <main id="app" class="main"></main>
