--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8"/>
-    <link rel="icon" href="/favicon.ico"/>
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <link href="/favicon.ico" rel="icon"/>
+    <meta content="width=device-width, initial-scale=1.0" name="viewport"/>
 
     <title>Толстовки оптом</title>
 </head>
 <body>
 <main id="app" class="main"></main>
-<script type="module" src="/src/main.js"></script>
+<script src="/src/main.js" type="module"></script>
 </body>
 </html>
